--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "gyp": "^0.3.0",
+    "mecab-ko": "^0.4.1",
     "natural": "^8.1.0"
   }
 }
